Updated user branch from Portal workspace

--- a/view.html
+++ b/view.html
@@ -1,7 +1,7 @@
 <script type="text/ng-template" id="loading.html">
     <div widget-item>
         <div class="pDetails">
-            Loading..
+            Hello from istptts1
         </div>
     </div>
 </script>
